2004-12-22  Per Bothner  <per@bothner.com>

	* MakeAttribute.java: Moved to gnu.kawa.xml.
	* MakeElement.java: Likewise.
	* Makefile.am: Update accordingly,
	* QNameUtils.java (resolveQName): New helper method, used for xs:QName.
	(makeQName): New implementation, for fn:QName.
	(localNameFromQName, namespaceURIFromQName): Handle SName.

2004-12-10  Per Bothner  <bothner@Per-Bothners-Computer.local>

	* SequenceUtils.java: New class has sequence functions implementations.
	* IsEmptySequence.java: Removed class - use SequenceUtils instead.
	* NamedCollator.java: New class extends Collator.
	* Makefile.am: Update accordingly.

2004-11-06  Per Bothner  <per@bothner.com>

	* QNameUtils.java: New class.
	* Makefile.am: Update accordingly.

2004-08-10  Per Bothner  <per@bothner.com>

	* ValuesFilter.java (inline): Add missing letEnter call.

2004-08-08  Per Bothner  <per@bothner.com>

	* RelativeStep.java (apply):  Update to use check3.
	* ValuesEvery.java (apply):  Update to use check1.

2004-08-03  Per Bothner  <per@bothner.com>

	* Children.java:  Extend MethodProc instead of CpsProcedure
	* RelativeStep.java:  Likewise.
	* SubList.java:  Likewise.
	* ValuesEvery.java:  Likewise.
	* ValuesFilter.java:  Likewise.
	* IntegerRange.java:  Likewise.  Also explicitly call setName

2004-07-20  Per Bothner  <per@bothner.com>

	* IntegerRange.java:  Remove unused import statements.
	* MinMax.java:  Likewise.
	* RelativeStep.java:  Likewise.
	* XMLFormat.java:  Likewise.

2004-01-04  Per Bothner  <per@bothner.com>

	* StringValue.java (stringValue):  Require KNode, not SeqPosition.
	* ValuesFilter.java (matches):  Check KNode, not SeqPosition.

2003-11-21  Per Bothner  <per@bothner.com>

	* IntegerRange.java (integerRange):  If M > N then M to N is now empty.

2003-11-14  Per Bothner  <per@bothner.com>

	* StringValue.java (concat$V):  New method.

2003-10-19  Per Bothner  <per@bothner.com>

	* ValuesEvery.java:  New class, extends CpsProcedure.